# blackblaze2-backup

./: .gitignore  .pre-commit-config.yaml  AI_CONTEXT.json  CONTRIBUTORS.md  DEVELOPMENT_NOTES.md  LICENSE  README.md  SECURITY.md  WINDOWS_TESTING_SOLUTION.md  bandit-report.json  blackblaze-backup-tool.desktop  blackblaze_backup.spec  build_ubuntu.sh  build_windows.bat  build_windows_clean.bat  cli.py  main.py  pyproject.toml  requirements-ci.txt  run.bat  run.py  run.sh  sample.env  setup-dev.sh  test_single_instance.py  tray.py  uv_run.bat  uv_run.py  uv_run.sh
.github/workflows/: build-packages.yml  build-ubuntu-deb.yml  build-windows-msi.yml  ci.yml
AI_CONTEXT/: architecture.json  core.json  learning_history.json  maintain.py  troubleshooting.json  user_experience.json
ai_context/: README.md  core.json  learning_history.json  troubleshooting.json
hooks/: hook-blackblaze_backup.py
scripts/: automated_error_reporter.py  check-formatting.py  check_secrets.py  setup-precommit.sh  setup_windows_vm.sh  sync_version.py  windows_error_collector.py  windows_test_suite.py  windows_testing_portal.html
src/blackblaze_backup/: __init__.py  blackblaze-backup-tool.desktop  config.py  core.py  gui.py  post_install.py  utils.py
tests/: conftest.py  test_comprehensive_5k.py  test_core.py  test_gui.py  test_performance_benchmark.py
tests/integration/: create_test_data.py  run_tests.py
