[project]
name = "blackblaze-backup-tool"
version = "1.0.0"
description = "A cross-platform GUI application for backing up local folders to BackBlaze B2 S3 buckets"
authors = [
    {name = "reshdesu", email = "reshdesu@example.com"},
    {name = "Claude (Anthropic)", email = "claude@anthropic.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.6.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
